--- a/frontend/.svelte-kit/output/client/.vite/manifest.json
+++ b/frontend/.svelte-kit/output/client/.vite/manifest.json
@@ -1,14 +1,15 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DKZzrnbA.js",
+    "file": "_app/immutable/entry/app.5yiiUeI9.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_CfI8e-WC.js",
-      "_Cs_GBzjH.js",
-      "_DRyVtr3L.js",
-      "_DLyp8TLP.js"
+      "_CbzEBpmS.js",
+      "_DiAmg8CG.js",
+      "_Bw0ub6xF.js",
+      "_D8Wx_O_h.js",
+      "_ARVtEmnK.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -17,90 +18,99 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.Baqq1U7V.js",
+    "file": "_app/immutable/nodes/0.U5q5pWxD.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_DRyVtr3L.js",
-      "_CfI8e-WC.js"
+      "_Bw0ub6xF.js",
+      "_CbzEBpmS.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CmWZerTU.js",
+    "file": "_app/immutable/nodes/1.D2ayAKRl.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_DRyVtr3L.js",
-      "_BZUzXAn1.js",
-      "_CfI8e-WC.js",
-      "_Cs_GBzjH.js",
-      "_Bd0eq8xv.js"
+      "_Bw0ub6xF.js",
+      "_BYZ3c1-S.js",
+      "_CbzEBpmS.js",
+      "_DiAmg8CG.js",
+      "_Drn_5P1N.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.DP2hjVax.js",
+    "file": "_app/immutable/nodes/2.B-kCFcwr.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_DRyVtr3L.js",
-      "_BZUzXAn1.js",
-      "_CfI8e-WC.js"
+      "_Bw0ub6xF.js",
+      "_BYZ3c1-S.js",
+      "_CbzEBpmS.js",
+      "_DiAmg8CG.js",
+      "_D8Wx_O_h.js"
     ]
   },
-  "_BZUzXAn1.js": {
-    "file": "_app/immutable/chunks/BZUzXAn1.js",
-    "name": "legacy",
-    "imports": [
-      "_CfI8e-WC.js"
-    ]
-  },
-  "_Bd0eq8xv.js": {
-    "file": "_app/immutable/chunks/Bd0eq8xv.js",
-    "name": "entry",
-    "imports": [
-      "_CfI8e-WC.js",
-      "_DLyp8TLP.js"
-    ]
-  },
-  "_CfI8e-WC.js": {
-    "file": "_app/immutable/chunks/CfI8e-WC.js",
-    "name": "runtime"
-  },
-  "_Cs_GBzjH.js": {
-    "file": "_app/immutable/chunks/Cs_GBzjH.js",
-    "name": "render",
-    "imports": [
-      "_CfI8e-WC.js",
-      "_DRyVtr3L.js"
-    ]
-  },
-  "_DLyp8TLP.js": {
-    "file": "_app/immutable/chunks/DLyp8TLP.js",
+  "_ARVtEmnK.js": {
+    "file": "_app/immutable/chunks/ARVtEmnK.js",
     "name": "index-client",
     "imports": [
-      "_CfI8e-WC.js"
+      "_CbzEBpmS.js"
     ]
   },
-  "_DRyVtr3L.js": {
-    "file": "_app/immutable/chunks/DRyVtr3L.js",
+  "_BYZ3c1-S.js": {
+    "file": "_app/immutable/chunks/BYZ3c1-S.js",
+    "name": "legacy",
+    "imports": [
+      "_CbzEBpmS.js"
+    ]
+  },
+  "_Bw0ub6xF.js": {
+    "file": "_app/immutable/chunks/Bw0ub6xF.js",
     "name": "disclose-version",
     "imports": [
-      "_CfI8e-WC.js"
+      "_CbzEBpmS.js"
+    ]
+  },
+  "_CbzEBpmS.js": {
+    "file": "_app/immutable/chunks/CbzEBpmS.js",
+    "name": "runtime"
+  },
+  "_D8Wx_O_h.js": {
+    "file": "_app/immutable/chunks/D8Wx_O_h.js",
+    "name": "props",
+    "imports": [
+      "_CbzEBpmS.js"
+    ]
+  },
+  "_DiAmg8CG.js": {
+    "file": "_app/immutable/chunks/DiAmg8CG.js",
+    "name": "render",
+    "imports": [
+      "_CbzEBpmS.js",
+      "_Bw0ub6xF.js"
+    ]
+  },
+  "_Drn_5P1N.js": {
+    "file": "_app/immutable/chunks/Drn_5P1N.js",
+    "name": "entry",
+    "imports": [
+      "_CbzEBpmS.js",
+      "_ARVtEmnK.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.C3_bWDY8.js",
+    "file": "_app/immutable/entry/start.7DhqtIxm.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_Bd0eq8xv.js"
+      "_Drn_5P1N.js"
     ]
   }
 }
