--- a/frontend/.svelte-kit/output/server/.vite/manifest.json
+++ b/frontend/.svelte-kit/output/server/.vite/manifest.json
@@ -8,11 +8,19 @@
       "_internal.js"
     ]
   },
+  "_equality.js": {
+    "file": "chunks/equality.js",
+    "name": "equality"
+  },
+  "_escaping.js": {
+    "file": "chunks/escaping.js",
+    "name": "escaping"
+  },
   "_exports.js": {
     "file": "chunks/exports.js",
     "name": "exports",
     "imports": [
-      "_index.js"
+      "_equality.js"
     ]
   },
   "_index.js": {
@@ -23,6 +31,7 @@
     "file": "chunks/internal.js",
     "name": "internal",
     "imports": [
+      "_equality.js",
       "_index.js"
     ]
   },
@@ -32,7 +41,9 @@
     "src": "node_modules/@sveltejs/kit/src/runtime/components/svelte-5/error.svelte",
     "isEntry": true,
     "imports": [
+      "_escaping.js",
       "_index.js",
+      "_equality.js",
       "_exports.js"
     ]
   },
@@ -56,6 +67,16 @@
     "file": "entries/pages/_page.svelte.js",
     "name": "entries/pages/_page.svelte",
     "src": "src/routes/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index.js",
+      "_escaping.js"
+    ]
+  },
+  "src/routes/+page.ts": {
+    "file": "entries/pages/_page.ts.js",
+    "name": "entries/pages/_page.ts",
+    "src": "src/routes/+page.ts",
     "isEntry": true
   }
 }
