--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Install dependencies  
         run: |  
+          cd backend
           pip install -r requirements.txt  
           pip install pytest  
 
